[package]
name = "b"
version = "0.4.0"
authors = ["bouzuya <m@bouzuya.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.1.2"
serde_json = "1.0.64"
structopt = "0.3.21"
thiserror = "1.0.24"

[dev-dependencies]
tempfile = "3.2.0"
