[package]
name = "b"
version = "0.8.0"
authors = ["bouzuya <m@bouzuya.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
chrono = "0.4.19"
nom = "6.1.2"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
structopt = "0.3.21"
thiserror = "1.0.24"

[dev-dependencies]
assert_cmd = "1.0.4"
predicates = "1.0.8"
tempfile = "3.2.0"
