[package]
name = "bbn"
version = "0.35.1"
authors = ["bouzuya <m@bouzuya.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
chrono = "0.4.19"
console = "0.14.1"
date-range = { path = "../date-range/" }
dialoguer = "0.8.0"
diff = "0.1.12"
hatena-blog-api = { git = "https://github.com/bouzuya/rust-hatena-blog-api", tag = "0.1.0" }
nom = "6.1.2"
open = "1.7.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
sqlx = { version = "0.5.5", features = [ "runtime-tokio-rustls", "sqlite" ] }
structopt = "0.3.21"
thiserror = "1.0.30"
tokio = { version = "1.7.1", features = ["full"] }
xdg = "2.2.0"

[dev-dependencies]
assert_cmd = "1.0.4"
predicates = "2.0.2"
tempfile = "3.2.0"
