[package]
name = "bejson"
version = "0.3.0"
authors = ["bouzuya <m@bouzuya.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.1.2"
structopt = "0.3.21"
thiserror = "1.0.25"

[dev-dependencies]
assert_cmd = "1.0.4"
tempfile = "3.2.0"
