[package]
name = "bex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.137"
tokio = { version = "1", features = ["full"] }
