[package]
name = "date-range"
version = "0.2.0"
authors = ["bouzuya <m@bouzuya.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
chrono = "0.4.19"
regex = "1.5.4"
structopt = "0.3.21"
thiserror = "1.0.24"
