[package]
name = "date-to-week-date"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
axum = "0.6.1"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
time = { version = "0.3.17", features = ["formatting", "parsing", "macros"] }
tokio = { version = "1.23.0", features = ["full"] }
