[package]
name = "fbauth"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.92"
axum = "0.7.7"
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.1", features = ["fs"] }
url = "2.5.2"
