[package]
name = "fcm-send"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive", "env"] }
google-cloud-auth = { version = "0.17.2", default-features = false, features = ["rustls-tls"] }
google-cloud-token = "0.1.2"
reqwest = { version = "0.12.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
