[package]
name = "genuuid"
version = "0.4.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
axum = "0.3.0"
structopt = "0.3.25"
thiserror = "1.0.30"
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[dev-dependencies]
assert_cmd = "2.0.2"
predicates = "2.0.3"
