[package]
name = "grpcal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.30", features = ["derive"] }
prost = "0.13.5"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tonic = "0.12.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.13.2", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12.3"
