[package]
name = "grpcal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.30", features = ["derive"] }
prost = "0.13.5"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tonic = "0.12.3"
tracing = "0.1.41"
tracing-stackdriver = { git = "https://github.com/bouzuya/tracing-stackdriver.git", rev = "1f0b7a06284c515b3c46c250db7ee72e57c8ac3c" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
uuid = { version = "1.13.2", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12.3"

[features]
default = ["memory"]
fs = []
memory = []
