[package]
name = "iko"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = ["any", "runtime-tokio-rustls"] }
thiserror = "1.0.31"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.57"
sqlx = { version = "0.5", features = ["any", "runtime-tokio-rustls", "sqlite"] }
