[package]
name = "its"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
limited-date-time = { git = "https://github.com/bouzuya/rust-limited-date-time", tag = "0.15.0" }
thiserror = "1.0.30"
ulid = "0.5.0"

[dev-dependencies]
anyhow = "1.0.52"
assert_cmd = "2.0.2"
predicates = "2.1.0"
