[package]
name = "markdown-link-helper"
version = "0.3.0"
authors = ["bouzuya <m@bouzuya.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
pulldown-cmark = "0.8.0"
regex = "1.4.6"
serde_json = "1.0.64"
structopt = "0.3.21"
