[package]
name = "markdown-link-helper"
version = "0.3.2"
authors = ["bouzuya <m@bouzuya.net>"]
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.1.2", features = ["derive"] }
pulldown-cmark = "0.9.2"
regex = "1"
serde_json = "1"
thiserror = "1.0.38"

[dev-dependencies]
assert_cmd = "2.0.8"
tempfile = "3.3.0"
