[package]
name = "markdown-link-helper"
version = "0.3.2"
authors = ["bouzuya <m@bouzuya.net>"]
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5.20", features = ["derive"] }
pulldown-cmark = "0.12.2"
regex = "1"
serde_json = "1"
thiserror = "1"

[dev-dependencies]
assert_cmd = "2.0.16"
tempfile = "3.13.0"
