[package]
name = "mfa"
version = "0.1.0"
authors = ["bouzuya <m@bouzuya.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
reqwest = { version = "0.10", features = ["blocking"] }
anyhow = "1.0.36"
dialoguer = "0.7.1"
dirs = "3.0.1"
