[package]
name = "mfa"
version = "0.1.0"
authors = ["bouzuya <m@bouzuya.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.36"
chrono = "0.4.19"
dialoguer = "0.10.1"
dirs = "3.0.1"
reqwest = { version = "0.10", features = ["blocking", "cookies"] }
scraper = "0.12.0"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
structopt = "0.3.21"
