[package]
name = "mmdv"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
axum = { version = "0.7.7", features = ["ws"] }
clap = { version = "4.5.20", features = ["derive"] }
notify = "7.0.0"
open = "5.3.0"
tokio = { version = "1.41.1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["fs"] }
