[package]
name = "mmdv"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws"] }
clap = { version = "4", features = ["derive"] }
notify = "7"
open = "5"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
