[package]
name = "nostrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive"] }
nostr-sdk = "0.18"
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
