[package]
name = "online-sitemap-builder"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
sitemap-xml = { git = "https://github.com/bouzuya/rust-sandbox.git", tag = "sitemap-xml/0.1.0" }
url = "2.3.1"
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ["HtmlInputElement", "EventTarget", "Event", "InputEvent"] }
yew = { version = "0.20.0", features = ["csr"] }
