[package]
name = "rfc2631"
version = "0.3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4.2", features = ["rand"] }
rand = "0.8.4"
thiserror = "1.0.29"

[dev-dependencies]
anyhow = "1.0.44"
hex = "0.4.3"
