[package]
name = "shorten-amazon-url"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
once_cell = "1.16.0"
regex = "1.7.0"
url = "2.3.1"
assert_cmd = "2.0.7"

[dev-dependencies]
