[package]
name = "sitemap-xml"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.7.1"
strum = { version = "0.24", features = ["derive"] }
thiserror = "1"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
url = "2"

[dev-dependencies]
anyhow = "1"
