[package]
name = "sitemaps"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = "3.4.0"
quick-xml = "0.27.1"
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.38"
url = "2.3.1"

[dev-dependencies]
anyhow = "1.0.68"
