[package]
name = "sitemaps"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = "3.4.0"
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.38"
time = { version = "0.3.17", features = ["formatting", "macros", "parsing"] }
url = "2.3.1"

[dev-dependencies]
anyhow = "1.0.68"
