[package]
name = "suiro"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
base32 = "0.4.0"
clap = { version = "3.2.5", features = ["derive"] }
termion = "1.5.6"
thiserror = "1.0.31"
