[package]
name = "tasks"
version = "0.7.0"
authors = ["bouzuya <m@bouzuya.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
dirs = "3.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
structopt = "0.3.21"

[dev-dependencies]
tempfile = "3.2.0"
