[package]
name = "todays-commits"
version = "0.2.0"
authors = ["bouzuya <m@bouzuya.net>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
argopt = "0.3.0"
thiserror = "1"
