[package]
name = "todays-commits"
version = "0.4.0"
authors = ["bouzuya <m@bouzuya.net>"]
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
argopt = "0.3.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
