[package]
name = "tsukota-export-tsv"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive", "env"] }
firestore-path = "0.8.0"
google-api-proto = { version = "1.495.0", features = ["google-firestore-v1"] }
google-authz = { version = "1.0.0-alpha.5", default-features = false, features = [
  "webpki-roots",
  "tonic",
] }
serde = { version = "1.0.196", features = ["derive"] }
serde-firestore-value = { version = "0.5.0", features = ["chrono"] }
tokio = { version = "1.36.0", features = ["full"] }
tonic = { version = "0.10.2", features = ["tls-webpki-roots"] }
