[package]
name = "tsukota-export-tsv"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
firestore-path = "0.9.7"
google-api-proto = { version = "1.495.0", features = ["google-firestore-v1"] }
google-authz = { version = "1.0.0-alpha.5", default-features = false, features = [
  "webpki-roots",
  "tonic",
] }
serde = { version = "1", features = ["derive"] }
serde-firestore-value = { version = "0.7", features = ["chrono"] }
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.11", features = ["tls-webpki-roots"] }
