[package]
name = "tsukota-export-tsv"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
firestore-path = "1"
googleapis-tonic-google-firestore-v1 = { version = "0.15.0" }
google-cloud-auth = { version = "0.17.2", default-features = false, features = ["rustls-tls"] }
google-cloud-token = "0.1.2"
serde = { version = "1", features = ["derive"] }
serde-firestore-value = { version = "0.16", features = ["chrono"] }
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12", features = ["tls-webpki-roots"] }
